2009-08-19  Christian Hoff  <christian_hoff@gmx.net>

	* glib/MainContext.cs: Add API to create new MainContexts. Add a few
	missing methods.
	* glib/MainLoop.cs: Allow creating MainLoops in non-default MainContexts.
	[Fixes #526232]

2009-08-18  Christian Hoff  <christian_hoff@gmx.net>

	* sample/GtkDemo/Makefile.am: Resurrect local Mono.Cairo build.

2009-08-13  Christian Hoff  <christian_hoff@gmx.net>

	* gtk/Widget.custom: Set the activate/set_scroll_adjustments signal IDs
	from managed code. Use the gtk_widget_get_window accessor.
	* gtk/glue/widget.c: Remove the corresponding glue functions.

2009-08-13  Christian Hoff  <christian_hoff@gmx.net>

	* generator/IGeneratable.cs: Remove MarshalReturnType, ToNativeReturnType,
	FromNativeReturn and ToNativeReturn as they never returned something else
	than MarshalType, FromNative/AllocNative and CallByName, respectively.
	* generator/Signal.cs: Use AllocNative for IManualMarshalers.

2009-08-12  Christian Hoff  <christian_hoff@gmx.net>

	* configure.in.in: Detect GDK backend.
	* */*.dll.config.in: Link against the libs of the correct GDK backend
	instead of using x11 on Linux/win32 on Windows.
	Patch by Christian Hergert.	[Fixes 527840]

2009-08-07  Mike Kestner  <mkestner@novell.com>

	* configure.in.in: add new dir and autofu for it.
	* Makefile.am: add new dir
	* gapi/*: a small extension method library to add generation-related
	api to GType in 2.0. Access it with -pkg:gapi-2.0-compat to pick up
	the needed refs.
	* generator/GObjectVM.cs: generate new GType getter methods.
	* generator/ObjectGen.cs: generate new GType getter methods.
	* glib/GType.cs: change a few props to methods to make them extension
	method friendly for 2.0 compat.
	* glib/Object.cs: use new GType getter methods.
	* glib/Value.cs: use new GType getter methods.
	* gtk/Widget.custom: use new GetClassPtr method.

2009-08-07  Mike Kestner  <mkestner@novell.com>

	* generator/ObjectGen.cs: kill GType ctor generation.