@@ -73,7 +73,7 @@ namespace GtkSharp.Generation {
 			sw.WriteLine ("#region Autogenerated code");
 			if (IsDeprecated)
 				sw.WriteLine ("\t[Obsolete]");
-			sw.Write ("\t{0} class " + Name, IsInternal ? "internal" : "public");
+			sw.Write ("\t{0} partial class " + Name, IsInternal ? "internal" : "public");
 			sw.WriteLine (" {");
 			sw.WriteLine ();
 
