@@ -1,5 +1,10 @@
 2009-08-19  Christian Hoff  <christian_hoff@gmx.net>
 
+	* generator/*.cs: Add the "partial" keyword to each generated class, 
+	struct and interface.
+
+2009-08-19  Christian Hoff  <christian_hoff@gmx.net>
+
 	* glib/MainContext.cs: Add API to create new MainContexts. Add a few
 	missing methods.
 	* glib/MainLoop.cs: Allow creating MainLoops in non-default MainContexts.
